History of collective.recipe.i18noverrides
==========================================

0.4 (unreleased)
----------------

- Nothing changed yet.


0.3 (2009-09-08)
----------------

- If no destinations are specified, we automatically copy the po files
  to all parts that use plone.recipe.zope2instance.
  [maurits]


0.2 (2009-08-12)
----------------

- Allow to specify an egg (with optional package)
  where the source directory can be found.
  [gotcha]

- Pin packages (at least zc.buildout) in both the main buildout.cfg
  and the one in the tests, to avoid test failures simply because the
  used zc.buildout is upgraded during the test run.
  [maurits]


0.1 (2009-06-05)
----------------

- Initial implementation moved over from a one-off script.  [maurits]

- Created recipe with ZopeSkel
  [Maurits van Rees]